# anchor

./: Cargo.toml  README.md  publish.bash  rust-toolchain.toml  version-bump.sh
.github/actions/setup-ts/: action.yaml
.github/workflows/: no-cashing-tests.yaml  tests.yaml
avm/: Cargo.toml
cli/: Cargo.toml
cli/npm-package/: package.json
cli/src/: config.rs  lib.rs  template.rs
client/: Cargo.toml
client/example/: Cargo.toml
docs/: package-lock.json  package.json
docs/programs/tic-tac-toe/: package.json
lang/: Cargo.toml
lang/attribute/access-control/: Cargo.toml
lang/attribute/account/: Cargo.toml
lang/attribute/constant/: Cargo.toml
lang/attribute/error/: Cargo.toml
lang/attribute/event/: Cargo.toml
lang/attribute/interface/: Cargo.toml
lang/attribute/program/: Cargo.toml
lang/attribute/state/: Cargo.toml
lang/derive/accounts/: Cargo.toml
lang/src/: context.rs  lib.rs  unreal.rs
lang/src/accounts/: account_loader.rs  interface.rs  interface_account.rs  mod.rs  program.rs
lang/syn/: Cargo.toml
lang/syn/src/: lib.rs
lang/syn/src/codegen/accounts/: __client_accounts.rs  __cpi_client_accounts.rs  mod.rs
lang/syn/src/codegen/program/: handlers.rs  instruction.rs
lang/syn/src/idl/: file.rs  mod.rs
lang/syn/src/parser/accounts/: mod.rs
lang/syn/src/parser/program/: instructions.rs  mod.rs
spl/: Cargo.toml
spl/src/: associated_token.rs  lib.rs  token.rs  token_2022.rs  token_interface.rs
spl/src/token_2022_extensions/: cpi_guard.rs  default_account_state.rs  immutable_owner.rs  interest_bearing_mint.rs  memo_transfer.rs  mod.rs  non_transferable.rs  permanent_delegate.rs  transfer_fee.rs  transfer_hook.rs
tests/: package.json
tests/anchor-cli-idl/migrations/: deploy.ts
tests/anchor-cli-idl/tests/: idl.ts
tests/bpf-upgradeable-state/tests/: bpf-upgradable-state.ts
tests/cashiers-check/tests/: cashiers-check.js
tests/cfo/scripts/: fees.js  list-market.js  trade-bot.js
tests/cfo/tests/: cfo.js
tests/chat/tests/: chat.js
tests/composite/tests/: composite.js
tests/cpi-returns/tests/: cpi-return.ts
tests/custom-coder/tests/: custom-coder.ts  spl-associated-token-coder.ts  system-coder.ts
tests/declare-id/tests/: declare-id.ts
tests/errors/tests/: errors.ts
tests/escrow/tests/: escrow.ts
tests/events/tests/: events.js
tests/floats/tests/: floats.ts
tests/ido-pool/tests/: ido-pool.js
tests/interface/tests/: interface.js
tests/lockup/migrations/: deploy.js
tests/lockup/tests/: lockup.js  utils.js
tests/misc/: miscNonRentExempt.ts
tests/multisig/tests/: multisig.js
tests/pda-derivation/migrations/: deploy.ts
tests/pda-derivation/tests/: typescript.spec.ts
tests/pyth/tests/: oracleUtils.ts  pyth.spec.ts
ts/: package.json
ts/src/: provider.ts
(+28 files in other folders)
