[package]
name = "anchor-syn"
version = "0.25.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor syntax parsing and code generation tools"
rust-version = "1.56"
edition = "2021"

[features]
init-if-needed = []
idl = []
hash = []
default = []
anchor-debug = []
seeds = []

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro2-diagnostics = "0.9"
quote = "1.0"
syn = { version = "1.0.60", features = ["full", "extra-traits", "parsing"] }
anyhow = "1.0.32"
heck = "0.3.1"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.2"
thiserror = "1.0"
bs58 = "0.3.1"

# In order to pull from these repos, you need to set up git authentication with Cargo:
# https://doc.rust-lang.org/cargo/appendix/git-authentication.html

#typeforge_core = { git = "https://github.com/staratlasmeta/typesmith", rev = "3167ac5c50e9c9396c57137813648ce82ee49a0c" }
typeforge_core = { path = "../../../typesmith/crates/typeforge_core" }
#idl = { git = "https://github.com/staratlasmeta/typesmith", rev = "3167ac5c50e9c9396c57137813648ce82ee49a0c" }
idl = { path = "../../../typesmith/crates/idl" }